--- a/c3_index.html
+++ b/c3_index.html
@@ -3,17 +3,46 @@
 
 <head>
 	<meta charset="utf-8">
+	<img src="images/town_hall_logo.gif" alt="logo" height="80">
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
 </head>
 
 <body>
 	<header>
-		San Joaquin Valley Town Hall
-		Celebrating our 75th Year		
+		<h2>San Joaquin Valley Town Hall</h2>
+		<h3>Celebrating our 75th Year</h3>
 	</header>
 	<main>
-		
+		<h2>Our Mission</h2>
+
+		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:</p>
+
+		<blockquote>"Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless."</blockquote>
+
+
+		<h2>Our Ticket Packages</h2>
+
+		<ul>
+			<li>Season Package: $95</li>
+			<li>Patron Package: $200</li>
+			<li>Single Speaker: $25</li>
+		</ul>
+
+		<h1>This season's guest speakers</h1>
+
+		<h3>
+			October<br>
+			<a href="speakers/brancaccio.html">David Brancaccio</a>
+		</h3>
+		<h3>
+			November<br>
+			Andrew Ross Sorkin
+		</h3>
+		<h3>
+			January<br>
+			Amy Chua
+		</h3>
 	</main>
 	<footer>
 		(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755		
