--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<h2>San Joaquin Valley Town Hall</h2>
-		<h3>Celebrating our 75th Year</h3>
+		<h3>Celebrating our 75<sup>th</sup> Year</h3>
 	</header>
 	<main>
 		<h2>Our Mission</h2>
@@ -35,17 +35,20 @@
 			October<br>
 			<a href="speakers/brancaccio.html">David Brancaccio</a>
 		</h3>
+		<img src="images/brancaccio75.jpg" alt="brancaccio" width="75" height="75">
 		<h3>
 			November<br>
-			Andrew Ross Sorkin
+			<a href="speakers/sorkin.html">Andrew Ross Sorkin</a>
 		</h3>
+		<img src="images/sorkin75.jpg" alt="Sorkin" width="75" height="75">
 		<h3>
 			January<br>
-			Amy Chua
+			<a href="speakers/chua.html">Amy Chua</a>
 		</h3>
+		<img src="images/chua75.jpg" alt="Chua" width="75" height="75">
 	</main>
 	<footer>
-		(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755		
+		<p>&copy 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
 	</footer>
 </body>
 </html>
